--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ version = {attr = "jaxmarl.__version__"}
 dependencies = {file = ["requirements/requirements.txt"]}
 optional-dependencies = {dev = { file = ["requirements/requirements-dev.txt"] }, qlearning = { file = ["requirements/requirements-qlearning.txt"] }}
 
+[tool.pyright]
+root = "."
+typeCheckingMode = "off"
+
+
 [project]
 name = "jaxmarl"
 readme = "README.md"
