--- a/baselines/MAPPO/config/mappo_homogenous_ff_hanabi.yaml
+++ b/baselines/MAPPO/config/mappo_homogenous_ff_hanabi.yaml
@@ -1,9 +1,8 @@
-"ENV_NAME": "hanabi"
-"ENV_KWARGS": {}
 "LR": 5.0e-4
 "NUM_ENVS": 1024 
 "NUM_STEPS": 128 
 "TOTAL_TIMESTEPS": 1e10
+"FC_DIM_SIZE": 128
 "UPDATE_EPOCHS": 4
 "NUM_MINIBATCHES": 4
 "GAMMA": 0.99
@@ -14,11 +13,13 @@
 "VF_COEF": 0.5
 "MAX_GRAD_NORM": 0.5
 "ACTIVATION": "relu"
-"LAYER_WIDTH": 512
+"ENV_NAME": "hanabi"
 "SEED": 30
-"ANNEAL_LR": False
+"NUM_SEEDS": 2
+"ENV_KWARGS": {}
+"ANNEAL_LR": True
 
 # WandB Params
 "WANDB_MODE": "disabled"
 "ENTITY": ""
-"PROJECT": "jaxmarl-hanabi"
+"PROJECT": ""
