--- a/baselines/MAPPO/config/mappo_homogenous_rnn_smax.yaml
+++ b/baselines/MAPPO/config/mappo_homogenous_rnn_smax.yaml
@@ -1,7 +1,9 @@
 "LR": 0.002
-"NUM_ENVS": 64
-"NUM_STEPS": 128 # must be 128
+"NUM_ENVS": 128
+"NUM_STEPS": 128 
 "TOTAL_TIMESTEPS": 1e7
+"FC_DIM_SIZE": 128
+"GRU_HIDDEN_DIM": 128
 "UPDATE_EPOCHS": 4
 "NUM_MINIBATCHES": 4
 "GAMMA": 0.99
@@ -25,4 +27,4 @@
 # WandB Params
 "WANDB_MODE": "disabled"
 "ENTITY": ""
-"PROJECT": "jaxmarl-smax"
+"PROJECT": ""
