--- a/baselines/IPPO/config/ippo_rnn_mpe.yaml
+++ b/baselines/IPPO/config/ippo_rnn_mpe.yaml
@@ -1,8 +1,10 @@
 "ENV_NAME": "MPE_simple_spread_v3"
 "LR": 5e-4
-"NUM_ENVS": 24
+"NUM_ENVS": 16
 "NUM_STEPS": 128
-"TOTAL_TIMESTEPS": 2e6
+"FC_DIM_SIZE": 128
+"GRU_HIDDEN_DIM": 128
+"TOTAL_TIMESTEPS": 1e7
 "UPDATE_EPOCHS": 4
 "NUM_MINIBATCHES": 2
 "GAMMA": 0.99
@@ -18,5 +20,5 @@
 
 # WandB Params
 "ENTITY": ""
-"PROJECT": "jaxmarl-mpe"
+"PROJECT": ""
 "WANDB_MODE" : "disabled"
