--- a/baselines/IPPO/config/ippo_rnn_smax.yaml
+++ b/baselines/IPPO/config/ippo_rnn_smax.yaml
@@ -1,7 +1,8 @@
 "LR": 0.004
 "NUM_ENVS": 128
 "NUM_STEPS": 128
-"GRU_HIDDEN_DIM": 256
+"GRU_HIDDEN_DIM": 128
+"FC_DIM_SIZE": 128
 "TOTAL_TIMESTEPS": 1e7
 "UPDATE_EPOCHS": 4
 "NUM_MINIBATCHES": 4
@@ -23,6 +24,6 @@
 "ANNEAL_LR": True
 
 # WandB Params
-"ENTITY": ${oc.env:WANDB_ENTITY}
-"PROJECT": "jaxmarl-smax"
+"ENTITY": ""
+"PROJECT": ""
 "WANDB_MODE" : "disabled"
